--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ull-esit-inf-dsi-21-22-prct09-filesystem-notes-app-alu0101068855 created by GitHub Classroom",
   "main": "index.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "start": "tsc-watch --onSuccess \"node dist/index.js --title='Red note'\"",
     "doc": "typedoc",
     "test": "mocha",
     "coverage": "nyc npm test && nyc report --reporter=lcov"
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.25",
+    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
@@ -35,5 +37,9 @@
     "tsc-watch": "^5.0.3",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "yargs": "^17.4.1"
   }
 }
