--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - name: Cloning repo
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
     - name: Use Node.js 16.x
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: 16.x
     - name: Installing dependencies
